# code-bridge-graph-migrate

./: CMakeLists.txt  README.md  build-wasm.sh  index.html  tailwind.config.ts
public/: index.html
src/: App.tsx  index.css
src/components/: CodeEditor.tsx  ExplanationPanel.tsx  GraphVisualization.tsx  Header.tsx  TransformationDetail.tsx  TransformationRuleList.tsx
src/components/ui/: breadcrumb.tsx
src/cpp/: ast.cpp  ast.h  bridge.cpp  bridge.h  graph.cpp  graph.h  transformer.cpp  transformer.h
src/data/: sampleData.ts
src/pages/: AboutPage.tsx  AnalysisPage.tsx  Dashboard.tsx  Index.tsx  RulesPage.tsx  VisualizePage.tsx
src/services/: CodeBridgeService.ts
src/types/: CodeEditor.d.ts
